Attempt to resolve keyframe lag on mobile devices by using backface-visibility and will-change

--- a/styles.css
+++ b/styles.css
@@ -230,8 +230,15 @@ body {
     z-index: 5;
 }
 @keyframes resizeContentBlock {
-    0% {width: 40%; height: 25%}
-    100% {width: 100%; height: 100%; top: 0}
+    0% {
+        width: 40%;
+        height: 25%;
+        backface-visibility: hidden;}
+    100% {
+        width: 100%;
+        height: 100%;
+        top: 0;
+        will-change: transform;}
 }
 .content {
     position: absolute;
@@ -605,7 +612,13 @@ body {
 #galleryImg12 {left: 0; top: 43%;}
 
 @keyframes openGalleryImg {
-    100% {height: 100%; max-width: 100%; left: 0; top: 0; z-index: 3;}
+    100% {
+        height: 100%;
+        max-width: 100%;
+        left: 0;
+        top: 0;
+        z-index: 3;
+        will-change: transform;}
 }
 
 /*Coding Section*/
